/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import public "models/additional_information.proto";
import public "models/location.proto";

message Place {

  Location location = 290430904;

  // The Station identifier has to be UNIQUE, even on submerged datasets this has to be the rule
  string stationID = 470774452;

  // Exact name of the station, given by the data source
  string name = 3373707;

  // OPTIONAL: If your station is named differently by the community, entering a colloquial name can help.
  string colloquialName = 151240888;

  // Description of features your place has. Depending on your data source, they can be completely different.
  repeated string features = 290659267;

  enum PlaceTypeEnum {
    STATION = 0;
    COORDINATE = 1;
    POINT_OF_INTEREST = 2;
    EXTRAORDINATE_PLACE = 3;
  }

  PlaceTypeEnum placeType = 181600484;

  enum VehicleTypesEnum {
    AIRPLANE = 0;
    INTERCITY_EXPRESS_TRAIN = 1;
    INTERCITY_TRAIN = 2;
    EUROCITY_EXPRESS_TRAIN = 3;
    EUROCITY_TRAIN = 4;
    OVERNIGHT_TRAIN = 5;
    HIGH_SPEED_TRAIN = 6;
    INTERREGIONAL_EXPRESS_TRAIN = 7;
    INTERREGIONAL_TRAIN = 8;
    REGIONAL_EXPRESS_TRAIN = 9;
    REGIONAL_TRAIN = 10;
    SUBURBAN_TRAIN = 11;
    SUBWAY = 12;
    TRAM = 13;
    BUS = 14;
    TRANSRAPID = 15;
    CABLECAR = 16;
    TAXI = 17;
    AUTONOMOUS_VEHICLE = 18;
    SPACE_VEHICLE = 19;
    RIDESHARING = 20;
    CARSHARING = 21;
    FERRY = 22;
    CRUISE_SHIP = 23;
    CAR = 24;
    MOTORBIKE = 25;
    ONDEMAND = 26;
    BIKE = 27;
    WALKING = 28;
    MISC = 29;
  }

  repeated VehicleTypesEnum vehicleTypes = 429165398;

  repeated AdditionalInformation additionalInformation = 467380604;

}
