/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import public "models/additional_information.proto";
import public "models/stopover.proto";
import public "models/time.proto";
import public "models/vehicle.proto";

message SubTrip {

  Stopover origin = 471748827;

  Stopover destination = 356105204;

  // OPTIONAL: Shows how many stopovers between origin and destination exist.
  repeated Stopover stopovers = 34342752;

  Time departureTime = 165595679;

  Time departureRealtime = 497346176;

  Time arrivalTime = 487586202;

  Time arrivalRealtime = 304223103;

  Vehicle vehicle = 342069036;

  repeated AdditionalInformation additionalInformation = 467380604;

}
