/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import public "models/additional_information.proto";

message Time {

  // Date time in RFC 3339 standard.
  string time = 3560141;

  // Date time as unix timestamp. (For languages which can't parse a timestamp)
  double unixTime = 288973707;

  repeated AdditionalInformation additionalInformation = 467380604;

}
