/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import public "models/additional_information.proto";
import public "models/place.proto";
import public "models/stopover.proto";
import public "models/time.proto";
import public "models/vehicle.proto";

message TimetableTrip {

  Place origin = 471748827;

  Place travelDestination = 283191151;

  // Lane where you can reach your vehicle
  string lane = 3314156;

  // OPTIONAL: Shows how many stopovers this current timetable trip has.
  repeated Stopover stopovers = 34342752;

  Time time = 3560141;

  Vehicle vehicle = 342069036;

  repeated AdditionalInformation additionalInformation = 467380604;

}
