/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import public "models/additional_information.proto";
import public "models/place.proto";
import public "models/sub_trip.proto";
import public "models/time.proto";

message Trip {

  // Context identifier of your search provider to create searches following your previous context
  string context = 414660016;

  Place origin = 471748827;

  Place destination = 356105204;

  Time departure = 145815310;

  Time arrival = 197336072;

  // Tells how many exchanges between stations/lanes a trip has.
  int32 amountOfExchange = 34985877;

  // An array of found trips to your search
  repeated SubTrip subtrips = 449627477;

  repeated AdditionalInformation additionalInformation = 467380604;

}
