/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import public "models/additional_information.proto";

message Vehicle {

  // General name of your current vehicle
  string name = 3373707;

  // OPTIONAL: Line name of your vehicle. Always nice to have this information, but still it's not required to set this property.
  string lineName = 114721953;

  // Description of features your vehicle has. Depending on your data source, they can be completely different.
  repeated string features = 290659267;

  // The provider of your vehicle. It's required because everyone should know in our opinion who serves public transport to you.
  string provider = 450624016;

  enum VehicleTypeEnum {
    AIRPLANE = 0;
    INTERCITY_EXPRESS_TRAIN = 1;
    INTERCITY_TRAIN = 2;
    EUROCITY_EXPRESS_TRAIN = 3;
    EUROCITY_TRAIN = 4;
    OVERNIGHT_TRAIN = 5;
    HIGH_SPEED_TRAIN = 6;
    INTERREGIONAL_EXPRESS_TRAIN = 7;
    INTERREGIONAL_TRAIN = 8;
    REGIONAL_EXPRESS_TRAIN = 9;
    REGIONAL_TRAIN = 10;
    SUBURBAN_TRAIN = 11;
    SUBWAY = 12;
    TRAM = 13;
    BUS = 14;
    TRANSRAPID = 15;
    CABLECAR = 16;
    TAXI = 17;
    AUTONOMOUS_VEHICLE = 18;
    SPACE_VEHICLE = 19;
    RIDESHARING = 20;
    CARSHARING = 21;
    FERRY = 22;
    CRUISE_SHIP = 23;
    CAR = 24;
    MOTORBIKE = 25;
    ONDEMAND = 26;
    BIKE = 27;
    WALKING = 28;
    MISC = 29;
  }

  VehicleTypeEnum vehicleType = 211295366;

  repeated AdditionalInformation additionalInformation = 467380604;

}
