/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import "google/protobuf/empty.proto";
import public "models/error.proto";
import public "models/timetable.proto";
import public "models/timetable_search.proto";
import public "models/timetable_suggestions.proto";

service TimetableService {
  rpc TimetableSourcePost (TimetableSourcePostRequest) returns (Timetable);

  rpc TimetableSuggestionsSourcePost (TimetableSuggestionsSourcePostRequest) returns (TimetableSuggestions);

}

message TimetableSourcePostRequest {
  // Data source to be selected on.
  string source = 1;
  // Request body of the timetable request
  TimetableSearch timetableSearch = 2;

}

message TimetableSuggestionsSourcePostRequest {
  // Data source to be selected on.
  string source = 1;
  // Request body of the timetable request
  TimetableSearch timetableSearch = 2;

}

