/*
  Open European Public Transit Format (OEPTF)
 
  An european standard for public transit.
 
  The version of the OpenAPI document: 1.0.0
  Contact: tristan.marsell@axitera.de
  Generated by OpenAPI Generator: https://openapi-generator.tech
*/

syntax = "proto3";

package de.zwei.shibi.proto;

import "google/protobuf/empty.proto";
import public "models/error.proto";
import public "models/more_trips_search.proto";
import public "models/search.proto";
import public "models/trip_result.proto";

service TripService {
  rpc TripMoreSourcePost (TripMoreSourcePostRequest) returns (TripResult);

  rpc TripSourcePost (TripSourcePostRequest) returns (TripResult);

}

message TripMoreSourcePostRequest {
  // Data source to be selected on.
  string source = 1;
  // Request body of the trip more search
  MoreTripsSearch moreTripsSearch = 2;

}

message TripSourcePostRequest {
  // Data source to be selected on.
  string source = 1;
  // Request body of the trip search
  Search search = 2;

}

